--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/dist/css/main.min.css">
-<link rel="shortcut icon" href="../dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-<link rel="shortcut icon" href="../dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+<link rel="stylesheet" href="dist/css/main.min.css">
+<link rel="shortcut icon" href="dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+<link rel="shortcut icon" href="dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
 
 
 
@@ -27,7 +27,7 @@
 
         <div class="nav__logo">
             <a href="index.html">
-                <img src="../dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
+                <img src="dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
             </a>
         </div>
 
@@ -41,7 +41,7 @@
             <a href="index.html#services">Usługi</a>
             <a href="index.html#pakiets">Pakiety</a>
             <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -49,7 +49,7 @@
             <a href="index.html#services" class="link-animation">Usługi</a>
             <a href="index.html#pakiets" class="link-animation">Pakiety</a>
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -72,7 +72,7 @@
                         <div>
                             <input type="checkbox" id="checkbox" class="form__checkbox form-item">
                             <label for="checkbox" class="form__label error-item">Akceptuje
-                                <a href="../privacy-policy.html" class="form__label-link">Politykę Prywatności</a>
+                                <a href="privacy-policy.html" class="form__label-link">Politykę Prywatności</a>
                             </label>
                         </div>
 
@@ -95,13 +95,13 @@
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="index.html#pakiets">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
@@ -109,8 +109,8 @@
 
  
 
-    <script src="../dist/js/main.min.js"></script>
-    <script src="../dist/js/form.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
+    <script src="dist/js/form.min.js"></script>
 </body>
 
 </html>
