--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/dist/css/main.min.css">
-<link rel="shortcut icon" href="../dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-<link rel="shortcut icon" href="../dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+<link rel="stylesheet" href="dist/css/main.min.css">
+<link rel="shortcut icon" href="dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+<link rel="shortcut icon" href="dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
 
 
 
@@ -21,14 +21,14 @@
 
 <body>
     <header class="header">
-        <nav class="nav dark-shadow">
+        <nav class="nav">
     <div class="wrapper">
 
 
 
         <div class="nav__logo">
             <a href="index.html">
-                <img src="../dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
+                <img src="dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
             </a>
         </div>
 
@@ -42,7 +42,7 @@
             <a href="index.html#services">Usługi</a>
             <a href="index.html#pakiets">Pakiety</a>
             <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -50,7 +50,7 @@
             <a href="index.html#services" class="link-animation">Usługi</a>
             <a href="index.html#pakiets" class="link-animation">Pakiety</a>
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -73,7 +73,7 @@
             <h2 class="section-heading">Usługi</h2>
             <div class="services">
 
-                <a href="../insideCleaning.html" class="services__box">
+                <a href="insideCleaning.html" class="services__box">
 
 
 
@@ -90,7 +90,7 @@ samochodu
                 </a>
 
 
-                <a href="../outsideCleaning.html" class="services__box services__box--outside-img">
+                <a href="outsideCleaning.html" class="services__box services__box--outside-img">
 
 
 
@@ -116,7 +116,7 @@ samochodu
                             <p class="card__box-title">Zabezpieczene Lakieru</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: zabezpieczenie lakieru 1/5</p>
-                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                <a href="outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -127,7 +127,7 @@ samochodu
                             <p class="card__box-title">Czyszczenie felg</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie felg 2/5</p>
-                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                <a href="outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -139,7 +139,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: pranie tapicerki <span
                                         class="inside-number1">3/5</span></p>
-                                <a href="../insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
+                                <a href="insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
                                     się więcej</a>
                             </div>
                         </div>
@@ -151,7 +151,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie kokpitu <span
                                         class="inside-number2">4/5</span></p>
-                                <a href="../insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
+                                <a href="insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -163,7 +163,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: bonetowanie podsufikti <span
                                         class="inside-number3">5/5</span> </p>
-                                <a href="../insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
+                                <a href="insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -207,44 +207,44 @@ samochodu
             <h2 class="section-heading">Moje realizacje</h2>
             <div class="wrapper">
                 <div class="realization__box">
-                    <img data-src="../dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3"
+                    <img data-src="dist/img/1 (17) repaired.jpg" class="realization__box-img realization__box-img--3"
                         alt="Wyprane fotele samochodowe wewnątrz trzyosobowego busa">
-                    <img data-src="../dist/img/1 (1) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (1) repaired.jpg" class="realization__box-img"
                         alt="Wnętrze pojazdu marki bmw po czyszczeniu kokpitu">
-                    <img data-src="../dist/img/1 (3) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (3) repaired.jpg" class="realization__box-img"
                         alt="Wnętrze pojazdu marki audi po czyszczeniu kokpitu i praniu tapicerki">
-                    <img data-src="../dist/img/1 (13) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (13) repaired.jpg" class="realization__box-img"
                         alt="Wnętrze pojazdu marki mazda po czyszczeniu kokpitu i praniu tapicerki">
-                    <img data-src="../dist/img/1 (10) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (10) repaired.jpg" class="realization__box-img"
                         alt="Lśniąca maska marki samochodu bmw po dogłębnym oczyszczeniu lakieru">
-                    <img data-src="../dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9"
+                    <img data-src="dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9"
                         alt="Pranie tapicerki samochodowej odkurzaczem piorącym marki karcher">
                     <div class="realization__box-img realization__box-img--1">
-                        <img data-src="../dist/img/mobileDblSeats.jpg"
+                        <img data-src="dist/img/mobileDblSeats.jpg"
                             class="realization__box-img realization__box-img--1 mobile"
                             alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
-                        <img data-src="../dist/img/seats-dbl.jpg"
+                        <img data-src="dist/img/seats-dbl.jpg"
                             class="realization__box-img realization__box-img--1 desktop"
                             alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
                     </div>
                     <div class="realization__box-img realization__box-img--4">
-                        <img data-src="../dist/img/mobileSteeringWheel.jpg"
+                        <img data-src="dist/img/mobileSteeringWheel.jpg"
                             class="realization__box-img realization__box-img--4 mobile"
                             alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
-                        <img data-src="../dist/img/dblSterringJpg.jpg"
+                        <img data-src="dist/img/dblSterringJpg.jpg"
                             class="realization__box-img realization__box-img--4 desktop"
                             alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
                     </div>
-                    <img data-src="../dist/img/1 (15) repaired.jpg"
+                    <img data-src="dist/img/1 (15) repaired.jpg"
                         class="realization__box-img realization__box-img--10"
                         alt="Element kabiny samochodowej w pianie podczas usuwania brudu">
-                    <img data-src="../dist/img/1 (5) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (5) repaired.jpg" class="realization__box-img"
                         alt="Samochód z otwartymi wszystkimi drzwiami w samochodzie, skupiający się na oczyszczonym bagażniku z brudu">
-                    <img data-src="../dist/img/1 (2) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (2) repaired.jpg" class="realization__box-img"
                         alt="Lśniący lakier na samochodzie na tle garażów">
-                    <img data-src="../dist/img/1 (16) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (16) repaired.jpg" class="realization__box-img"
                         alt="Czyszczenie pędzelkiem środka drzwi w samochodzie">
-                    <img data-src="../dist/img/1 (9) repaired.jpg" class="realization__box-img"
+                    <img data-src="dist/img/1 (9) repaired.jpg" class="realization__box-img"
                         alt="Efekt przed i po czyszczeniu gąbką deski rozdzielczej">
                 </div>
             </div>
@@ -260,13 +260,13 @@ samochodu
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="index.html#pakiets">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
@@ -274,7 +274,7 @@ samochodu
 
  
 
-    <script src="../dist/js/main.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
