--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -11,9 +11,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/dist/css/main.min.css">
-<link rel="shortcut icon" href="../dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-<link rel="shortcut icon" href="../dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+<link rel="stylesheet" href="dist/css/main.min.css">
+<link rel="shortcut icon" href="dist/img/white-favicon.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+<link rel="shortcut icon" href="dist/img/figma-favicon 1.png" type="image/x-icon" media="(prefers-color-scheme: light)">
 
 
 </head>
@@ -26,7 +26,7 @@
 
         <div class="nav__logo">
             <a href="index.html">
-                <img src="../dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
+                <img src="dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
             </a>
         </div>
 
@@ -40,7 +40,7 @@
             <a href="index.html#services">Usługi</a>
             <a href="index.html#pakiets">Pakiety</a>
             <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -48,7 +48,7 @@
             <a href="index.html#services" class="link-animation">Usługi</a>
             <a href="index.html#pakiets" class="link-animation">Pakiety</a>
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -61,7 +61,7 @@
                 <div class="inside-cleaning">
                     <div class="inside-cleaning__box">
                         <div class="inside-cleaning__box-best">Najpopularniejsze</div>
-                        <img src="../dist/img/pranieTapicerkiStrona.jpg"
+                        <img src="dist/img/pranieTapicerkiStrona.jpg"
                             alt="Pranie tapicerki samochodowej odkurzaczem piarącym" class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-license">
@@ -100,7 +100,7 @@
                     </div>
 
                     <div class="inside-cleaning__box" id="about-cockpit">
-                        <img src="../dist/img/pedzelkowanierd.jpg" alt="Czyszczenie pędzelkiem kokpitu w samochodzie"
+                        <img src="dist/img/pedzelkowanierd.jpg" alt="Czyszczenie pędzelkiem kokpitu w samochodzie"
                             class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-license">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="inside-cleaning__box" id="about-headliner">
-                        <img src="../dist/img/car-headliner.jpg" alt="Czysta podsufitka w samochodzie"
+                        <img src="dist/img/car-headliner.jpg" alt="Czysta podsufitka w samochodzie"
                             class="inside-cleaning__box-img">
 
                         <div class="inside-cleaning__box-offer">
@@ -179,13 +179,13 @@
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak zamówić</a>
             <a href="index.html#pakiets">Pakiety</a>
-            <a href="../contact.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
@@ -194,7 +194,7 @@
  
 
 
-    <script src="../dist/js/main.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
