--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <p class="header__text">Witaj w naszym wyjątkowym świecie auto detailingu! Jeśli szukasz doskonałej
                 pielęgnacji dla Twojego samochodu, jesteś we właściwym miejscu. Daj swojemu pojazdowi wyjątkową troskę,
                 odświeżenie i ochronę, które podkreślą jego piękno i spraw, by Twój samochód błyszczał na drodze.</p>
-            <a href="/#services" class="header__btn">Sprawdź ofertę</a>
-            <a href="/#services" aria-label="Zjedź niżej by sprawdzić ofertę"><i
+            <a href="#services" class="header__btn">Sprawdź ofertę</a>
+            <a href="#services" aria-label="Zjedź niżej by sprawdzić ofertę"><i
                     class="fa-solid fa-angles-down header__scroll-down"></i></a>
         </div>
 
@@ -116,7 +116,7 @@ samochodu
                             <p class="card__box-title">Zabezpieczene Lakieru</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: zabezpieczenie lakieru 1/5</p>
-                                <a href="outsideCleaning#about-pakiet" class="card__box-info-link">Dowiedz się
+                                <a href="outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -127,7 +127,7 @@ samochodu
                             <p class="card__box-title">Czyszczenie felg</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie felg 2/5</p>
-                                <a href="outsideCleaning#about-pakiet" class="card__box-info-link">Dowiedz się
+                                <a href="outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -139,7 +139,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: pranie tapicerki <span
                                         class="inside-number1">3/5</span></p>
-                                <a href="insideCleaning#about-upholstery" class="card__box-info-link">Dowiedz
+                                <a href="insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
                                     się więcej</a>
                             </div>
                         </div>
@@ -151,7 +151,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie kokpitu <span
                                         class="inside-number2">4/5</span></p>
-                                <a href="insideCleaning#about-cockpit" class="card__box-info-link">Dowiedz się
+                                <a href="insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -163,7 +163,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: bonetowanie podsufikti <span
                                         class="inside-number3">5/5</span> </p>
-                                <a href="insideCleaning#about-headliner" class="card__box-info-link">Dowiedz się
+                                <a href="insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -178,7 +178,7 @@ samochodu
 
                 </div>
 
-                <p class="info-pakiets">Skorzystaj z wybranego pakietu lub sprawdź nasze <a href="/#services"
+                <p class="info-pakiets">Skorzystaj z wybranego pakietu lub sprawdź nasze <a href="#services"
                     class="info-pakiets-link">pojedyncze
                     opcje</a></p>
         </section>
@@ -257,16 +257,16 @@ samochodu
     <div class="wrapper">
         <div class="footer__box-links">
             <a href="#">Home</a>
-            <a href="/#services">Usługi</a>
-            <a href="/#how-to-order">Jak zamówić</a>
-            <a href="/#pakiets">Pakiety</a>
-            <a href="contact">Kontakt</a>
+            <a href="#services">Usługi</a>
+            <a href="#how-to-order">Jak zamówić</a>
+            <a href="#pakiets">Pakiety</a>
+            <a href="contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/_k_u_p_s_i_k_/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="contact" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
